--- a/app/views/spree/admin/order_rewards/_rules.html.erb
+++ b/app/views/spree/admin/order_rewards/_rules.html.erb
@@ -21,7 +21,7 @@
         <div class="radio">
           <% # = f.label "match_policy_#{policy}" do %>
             <% # = f.radio_button :match_policy, policy %>
-            <% # = Spree.t "order_reward_form.match_policies.#{policy}" %>
+            <% # = policy %>
           <% # end %>
         </div>
       <% end %>
