--- a/app/views/spree/admin/order_rewards/actions/_promo_code_for_every.html.erb
+++ b/app/views/spree/admin/order_rewards/actions/_promo_code_for_every.html.erb
@@ -2,6 +2,10 @@
   <div class="row no-marginb">
     <% unless order_reward_action.new_record? %>
       <div class="form-group col-md-12 no-marginb settings">
+        <label>For every</label>
+        <%= text_field_tag "#{param_prefix}[preferred_for_every]", (order_reward_action.preferred_for_every), class: 'form-control marginb', placeholder: 'For Every' %>
+      </div>
+      <div class="form-group col-md-12 no-marginb settings">
         <label>Amount</label>
         <%= text_field_tag "#{param_prefix}[preferred_amount]", (order_reward_action.preferred_amount), class: 'form-control marginb', placeholder: 'Amount' %>
         <%= hidden_field_tag "#{param_prefix}[id]", order_reward_action.id %>
