--- a/app/views/spree/admin/order_rewards/actions/_store_credit.html.erb
+++ b/app/views/spree/admin/order_rewards/actions/_store_credit.html.erb
@@ -3,11 +3,8 @@
   <div class="row no-marginb">
     <% unless order_reward_action.new_record? %>
       <div class="form-group col-md-12 no-marginb settings">
-        <div class="alert alert-info margint no-marginb">
-          If the FOR EVERY field is left blank, the store credit is applied once per order.
-        </div>
-        <%= text_field_tag "#{param_prefix}[preferred_amount]", (order_reward_action.preferred_amount if order_reward_action.preferred_amount > 0), class: 'form-control marginb', placeholder: 'Amount' %>
-        <%= text_field_tag "#{param_prefix}[preferred_for_every]", (order_reward_action.preferred_for_every if order_reward_action.preferred_for_every > 0), class: 'form-control marginb', placeholder: 'For Every' %>
+        <label>Amount</label>
+        <%= text_field_tag "#{param_prefix}[preferred_amount]", (order_reward_action.preferred_amount), class: 'form-control marginb', placeholder: 'Amount' %>
         <%= hidden_field_tag "#{param_prefix}[id]", order_reward_action.id %>
       </div>
     <% end %>
